--- a/gobotany/simplekey/templates/simplekey/dich_key_placeholder.html
+++ b/gobotany/simplekey/templates/simplekey/dich_key_placeholder.html
@@ -17,16 +17,16 @@
         <div class="content">
             <div class="container">
                 <div id="main">
-                    <h2>Go Botany Dichotomous Key</h2>
-                    <p>This key will cover all 3500 species, subspecies, and
+                    <h2>Dichotomous Key</h2>
+                    <p>This key will cover all 3,500 species, subspecies, and
                     varieties of native and naturalized plants in New
-                    England, and is designed for experienced botanists.</p><br />
+                    England, and is designed for experienced botanists.</p>
                     <p>It allows you to choose characteristics which match your
                     plant from a series of paired options, eventually honing in
-                    on the indivdual species.</p><br />
+                    on the indivdual species.</p>
                     <p>We are completing data input for all these taxa, and the
                     Dichotomous Key will be available in Summer 2012. Check back
-                    soon!</p><br />
+                    soon!</p>
                 </div>
                 <div id="sidebar">
                     {# Use SimpleKey until a page-specific design is created #}
