--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -932,7 +932,9 @@ div.section.namap div.trans { /* Transparent div to make North America map objec
 #taxon #sidebar { height: 1116px; }
 
 /* Help section: sidebar, heading, list styles */
-#getting-started #sidebar, #about #sidebar { height: 1046px; }
+#getting-started #sidebar { height: 1046px; }
+
+#about #sidebar { height: 950px; }
 
 #advanced-map #sidebar { height: 746px; }
 
@@ -1285,7 +1287,9 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   #home #banner #overlay { top: 115px; }
   #home #banner > img { height: 115px; }
   #home #banner + .three-col { padding-top: 375px; }
-  .app .list-item h3 { clear: left; } }
+  .app .list-item h3 { clear: left; }
+  #about #main > img { width: 57%; }
+  #about #main img.bookcover { width: auto; } }
 /* Landscape-orientation styles */
 @media only screen and (min-width: 401px) and (max-width: 600px) { html { -webkit-text-size-adjust: none; }
   body { padding-top: 75px; }
@@ -1341,13 +1345,12 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   #home #search-suggest .menu, .app #search-suggest .menu { top: 83px; }
   #home #banner { margin: 0; position: relative; }
   #home #banner #overlay { background: #f7fbe9; height: auto; left: 0; padding: 0; text-align: center; }
-  #breadcrumb p { margin-left: 8px; margin-right: 8px; }
   #home #banner h2 { font-size: 28px; margin: 6px 0 0; }
   #home #banner p { padding: 0 8px; }
   #home #banner #overlay img { width: 53%; }
   #home #banner a#cta { background-position: 50% 0; margin: 6px; }
   #home .three-col { background: none; float: none; height: inherit; margin: 14px 0; padding: 0; width: auto; }
-  #home .three-col h3, #home .three-col h5, #home .three-col p, #home .three-col a { margin-left: 8px; margin-right: 8px; }
+  #breadcrumb p, #home .three-col h3, #home .three-col h5, #home .three-col p, #home .three-col a, .app h2, .app p.tip, .app .list-item, .app #main p, .app #main h3, #about #main ul { margin-left: 8px; margin-right: 8px; }
   #home .three-col a.learn-more { margin-top: 6px; }
   #home #potd { padding: 8px; }
   #home #potd > a { margin: 0; margin-bottom: 4px; margin-right: 8px; }
@@ -1365,7 +1368,6 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   #sidebar .section, #sidebar .section.plant-map { margin-top: 16px; padding-bottom: 0; }
   #sidebar .section .get-help-btn, #sidebar .section .view-map-btn { margin-bottom: 0; }
   .app #main { margin-bottom: 14px; }
-  .app h2, .app p.tip, .app .list-item, .app #main p { margin-left: 8px; margin-right: 8px; }
   .app p.tip { font-size: 14px; }
   .app .img-gallery { margin-bottom: 10px; }
   .app .list-item .section-title { font-size: 10px; }
@@ -1389,6 +1391,8 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   #advanced-id #main .dk-landing-section:first-child { margin-top: 0; }
   #advanced-id #main .landing-divider { display: none; }
   #advanced-id #main .dk-landing-section > a { margin-left: 16px; position: static; }
+  #about #main ul { padding-left: 14px; }
+  #about #main > img, #about #main img.bookcover { margin-bottom: 8px; margin-left: 8px; margin-right: 8px; }
   #glossary header h1 { width: auto; }
   #glossary h2 { margin-left: 4px; }
   #glossary #alphabet { line-height: 250%; width: auto; }
