Species page: Add note about states' definitions for status codes. (#173)

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -160,6 +160,8 @@
                 {% endif %}
                 
                 <h3>New England Distribution and Conservation Status</h3>
+                <p>Exact status definitions can vary from state to
+                state. For precise details, please check with your state.</p>
                 <table>
                     <thead>
                         <tr>
