Small screens: Getting Started page: fix layout, spacing, labels. (#174)

--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -38,7 +38,7 @@
             class="screenshot-thumb"
             alt="How to get started: small screenshot">
             <img src="/static/images/icons/zoom.png"
-            alt=""> Click to enlarge</a>
+            alt=""> Enlarge</a>
         <ul>
             <li>Choose the plant group you think your plant is in.
             To do this, compare the features of your plant with
@@ -60,8 +60,7 @@
             src="/static/images/layout/screenshot-4-small.jpg"
             class="screenshot-thumb" alt="What's a plant group: small
             screenshot">
-            <img src="/static/images/icons/zoom.png" alt=""> Click to
-            enlarge</a>
+            <img src="/static/images/icons/zoom.png" alt=""> Enlarge</a>
         <ul>
             <li>It's a set of plants that share some
             common traits that would cause many people to think of them
@@ -85,7 +84,7 @@
             class="screenshot-thumb"
             alt="What happens next: small screenshot">
             <img src="/static/images/icons/zoom.png"
-            alt=""> Click to enlarge</a>
+            alt=""> Enlarge</a>
         <ul>
             <li>Next, choose which subgroup your plant belongs to. For
             example, if your plant is woody like a tree, you'll be asked if
@@ -114,7 +113,7 @@
             alt="What's next: small screenshot">
             <img
             src="/static/images/icons/zoom.png"
-            alt=""> Click to enlarge</a>
+            alt=""> Enlarge</a>
         <ul>
             <li>On the left side of the new page is a list of questions to
             help
