--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1097,9 +1097,9 @@ div.section.namap div.trans { /* Transparent div to make North America map objec
 
 #search-results-list li p { line-height: 140%; margin-left: 44px; margin-top: 2px; }
 
-.search-navigation { text-align: right; }
+.search-navigation { font-size: 14px; text-align: center; }
 
-.search-navigation p, .search-navigation ul { display: inline; }
+.search-navigation ul { display: inline; }
 
 .search-navigation li { display: inline; margin: 0 2px; }
 
@@ -1368,6 +1368,14 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   #sidebar .section, #sidebar .section.plant-map { margin-top: 16px; padding-bottom: 0; }
   #sidebar .section .get-help-btn, #sidebar .section .view-map-btn { margin-bottom: 0; }
   #sidebar .section.separate p { clear: left; }
+  #search-results #search-results-list { border-top: 0; margin: 10px 0; padding: 0; }
+  #search-results #search-results-list li { border-bottom: 0; padding: 4px 0; }
+  #search-results #search-results-list li a { font-size: 14px; }
+  #search-results #search-results-list li img { margin: -1px 5px 0; }
+  #search-results #search-results-list li p { font-size: 11px; margin-left: 0; margin-right: 0; }
+  #search-results .search-navigation { font-size: 18px; line-height: 200%; text-align: center; }
+  #search-results #search-results-list li, #search-results .search-navigation { margin-left: 8px; margin-right: 8px; }
+  #search-results .search-navigation li { padding: 0 6px; }
   .app #main { margin-bottom: 14px; }
   .app p.tip { font-size: 14px; }
   .app .img-gallery { margin-bottom: 10px; }
