--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -2334,7 +2334,8 @@ div.section.namap div.trans {
     margin-top: 2px;
 }
 .search-navigation {
-    font-size: 14px;
+    font-family: $headings-font;
+    font-size: 15px;
     text-align: center;
 }
 .search-navigation ul {
